Updated URLs for SEO

--- a/.htaccess
+++ b/.htaccess
@@ -4,3 +4,9 @@ Redirect 301 /digital_marketing/index.html/digital_marketing/digitalstrategy.htm
 Redirect 301 /web_development/index.html/web_development/webdesign.html
 Redirect 301 /about.html/who-we-are.html
 Redirect 301 /mywork.html/our-previous-work.html
+Redirect 301 /websiteaudit.html/wesbite-audit.html
+Redirect 301 /webdesign.html/web-design.html
+Redirect 301 /seo.html/seo-services.html
+Redirect 301 /landingpages.html/landing-pages.html
+
+
