updated URL for SEO

--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,12 @@
 Redirect 301 /contact.html/index.html#contact 
-Redirect 301 /creative_services/index.html/creative_services/brandstrategy.html 
-Redirect 301 /digital_marketing/index.html/digital_marketing/digitalstrategy.html
-Redirect 301 /web_development/index.html/web_development/webdesign.html
+Redirect 301 /creative-services/index.html/creative-services/brandstrategy.html 
+Redirect 301 /digital-marketing/index.html/digital-marketing/digitalstrategy.html
+Redirect 301 /web-development/index.html/web-development/web-design-christchurch.html
 Redirect 301 /about.html/who-we-are.html
 Redirect 301 /mywork.html/our-previous-work.html
-Redirect 301 /websiteaudit.html/wesbite-audit.html
-Redirect 301 /webdesign.html/web-design.html
-Redirect 301 /seo.html/seo-services.html
-Redirect 301 /landingpages.html/landing-pages.html
+Redirect 301 /web-development/websiteaudit.html/web-development/website-audit-checker-nz.html
+Redirect 301 /web-development/webdesign.html/web-development/web-design-christchurch.html
+Redirect 301 /web-development/seo.html/web-development/seo-services-christchurch.html
+Redirect 301 /web-development/landingpages.html/web-development/landing-pages.html
 
 
