--- a/.htaccess
+++ b/.htaccess
@@ -8,5 +8,6 @@ Redirect 301 /web-development/websiteaudit.html/web-development/website-audit-ch
 Redirect 301 /web-development/webdesign.html/web-development/web-design-christchurch.html
 Redirect 301 /web-development/seo.html/web-development/seo-services-christchurch.html
 Redirect 301 /web-development/landingpages.html/web-development/landing-pages.html
+Redirect 301 /digital-marketing/websitemarketing.html/digital-marketing/website-marketing-christchurch.html
 
 
