updated urls for seo +redirects

--- a/.htaccess
+++ b/.htaccess
@@ -9,5 +9,18 @@ Redirect 301 /web-development/webdesign.html/web-development/web-design-christch
 Redirect 301 /web-development/seo.html/web-development/seo-services-christchurch.html
 Redirect 301 /web-development/landingpages.html/web-development/landing-pages.html
 Redirect 301 /digital-marketing/websitemarketing.html/digital-marketing/website-marketing-christchurch.html
+Redirect 301 /digital-marketing/emailmarketing.html/digital-marketing/email-marketing-agency-christchurch.html
+Redirect 301 /digital-marketing/digitalstrategy.html/digital-marketing/digital-strategy-christchurch-nz.html
+Redirect 301 /creative-services/template.html/creative-services/document-templates-formatting-graphic-design.html
+Redirect 301 /creative-services/marketingcollateral.html/creative-services/marketing-material-graphic-design.html
+Redirect 301 /creative-services/logodesign.html/creative-services/logo-design-christchurch-nz.html
+Redirect 301 /creative-services/brandstrategy.html/creative-services/brand-strategy-development.html
+
+
+
+
+
+
+
 
 
